refactor: 값 객체를 record로 변환 및 모던 Java 문법 적용
[QubitIndex.java]
- class → record 변환 (36줄 → 14줄, 61% 감소)
- Compact constructor로 검증 로직 간소화
- equals/hashCode 자동 생성

[Probability.java]
- class → record 변환 (48줄 → 23줄, 52% 감소)
- Compact constructor로 검증 로직 간소화
- toPercentage() 메서드 유지 (비즈니스 로직)
- equals/hashCode 자동 생성

[CircuitStep.java]
- gates.get(0) → gates.getFirst() (Java 21+)

[변경하지 않은 클래스]
- CNOTGate: 인터페이스 구현, 복잡한 비즈니스 로직
- QuantumCircuit: 복잡한 비즈니스 로직 (execute, getTotalGateCount 등)
- CircuitStep: 상태 변경 로직, record 부적합

코드 라인 수 84줄 → 37줄 (56% 감소)